fixes search bars on smaller windows

--- a/src/css/mobile.styl
+++ b/src/css/mobile.styl
@@ -14,6 +14,15 @@
 		right 300px
 		top 70px
 
+@media (max-width: 900px)
+	.report-button
+		right 70px
+		top 120px
+
+	.search-button
+		right 112px
+		top 70px
+
 
 @media (max-width: 768px)
 	.mobile-footer
